--- a/ah/css/style_index.css
+++ b/ah/css/style_index.css
@@ -7,6 +7,11 @@
    background-color:rgb(1, 2, 36);
 	text-align:centre;
 	font-family:Calibri;
+	text-align: justify;
+}
+form{
+	
+	margin-left:18px;
 }
 table2  {
 	
@@ -23,8 +28,8 @@ table2  {
 		transition-duration:0.5s;
 		box-shadow: inset 0px 0px 1px rgba(0,0.1,0,0.1);
 		padding: 25px;
-		margin: 50px;
-		margin-left: 50px; padding-left: 0px; padding-right: 0px;
+		margin-right: 10px;
+		margin-left: 218px; padding-left: 0px; padding-right: 0px;
 		}
 	input{
 		float: centre;
@@ -44,36 +49,37 @@ table2  {
 	
 	button{
 	
-	margin-top: 20px;
+	margin-top: 25px;
 	background-color:rgb(243, 166, 12) ;
 	color:white;
 	float: center;
 	width:91%;
-	height:30px;
+	height:45px;
 	font-family:Verdana, Geneva, sans-serif;
-	font-size:16px;
+	font-size:20px;
 	border:#FFA500;
 	border-radius:4px;
 	
 	}
 
 	table{
-		margin-right: 100px; 
-		margin-top: 90px; 
-		width: 30%;
+ 
 		background-color:rgb(1, 2, 36);
 		color:  rgb(204, 243, 15) ;
-		text-align:center;
+		text-align:left;
 		float:right ;
-		width:25%;
 		height:20px;
+		width: 30%;
 		border:2px solid rgb(52, 223, 4) ;
+		border-left-width: 2px; 
 		font-family:Verdana, Geneva, sans-serif;
-		font-size:16px;
+		font-size:22px;
 		transition-duration:0.5s;
 		box-shadow: inset 0px 0px 1px rgba(0,0.1,0,0.1);
-		padding: 25px;
-		margin: 65px;
+		padding: 15px 0px 15px 10px;
+		margin: 85px;
+		margin-right: 100px; 
+		margin-top: 50px;
 		}
 
  
@@ -105,12 +111,7 @@ a{
 	font-family:Verdana, Geneva, sans-serif;
 	font-size:90px;
 }
-b{
-	font-family:Verdana, Geneva, sans-serif;
-	text-align: center;
-	color: #FF1493;
-    margin-left:45px;
-	font-size:30px;
+
 }
 c{
 	font-family:veranda;
